# adeptus_necroneerium

./: .gitignore  AGENTS.md  README.md  pyproject.toml  verify-adeptus-update.ps1
.codex-plugin/: plugin.json
docs/: charter.md  manifesto.md  skill-outline.md
hooks/: adeptus_hook.py  hooks.json
scripts/: adeptus_state.py
skills/adeptus-necroneerium/: SKILL.md
skills/adeptus-necroneerium/agents/: openai.yaml
skills/adeptus-necroneerium/roles/: lich.md  shade.md  skeleton.md  vampire.md
skills/adeptus-necroneerium/templates/: spec.md
skills/layered-agile-coding/: SKILL.md
skills/layered-agile-coding/roles/: vampire.md
skills/layered-agile-coding/templates/: spec.md
src/adeptus_necroneerium/: __init__.py  cli.py  spec_validation.py
tests/: test_completion_guard.py  test_skill_contract.py  test_spec_validation.py
