[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adeptus-necroneerium"
version = "0.1.0"
description = "Tools for the Layered Agile Coding workflow"
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
necroneerium-spec = "adeptus_necroneerium.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
